--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -17,50 +17,17 @@
         <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
         <!-- Latest compiled and minified JavaScript -->
+      
+
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <div class="row">
-            <div class="col-md-12">
-                <table>
-                    <tr>
-                        <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
-                        <td>
-                            <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="FFC.com" width="70" height="60"></td>
-                        </td>
-                        <td>
-                            <h4>Family Folder Collector</h4>
-                            <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
-                            <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
-                            <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
-                            <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
-
-                            <center>
-                                <td>
-                                    <nav>
-
-                                        <ul class="nav nav-pills navbar-righ">
-
-                                            <li><a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a></li>
-                                            <li><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li>
-                                            <li><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li>
-                                            <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
-                                            <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
-                                            <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
-                                        </ul>
-                                    </nav>
-
-
-                                </td>
-                            </center>
-                    </tr>
-                </table>
-            </div>
-        </div>
-</head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <style>
+.navbar-inverse {
+    background-color: #ecf0f1;
+}
     .carousel-inner>.item>img,
     .carousel-inner>.item>a>img {
         width: auto;
@@ -100,25 +67,63 @@
     }
 
     .trb-video-bg {
-        background-color:#d9ffb3;
+        background-color: #d9ffb3;
     }
 
-td[Attributes Style] {
-    width: 244px;
-    height: 186px;
-    vertical-align: top;
-}
-user agent stylesheet
-td, th {
-    display: table-cell;
-    vertical-align: inherit;
+    td[Attributes Style] {
+        width: 244px;
+        height: 186px;
+        vertical-align: top;
+    }
+
+    user agent stylesheet td,
+    th {
+        display: table-cell;
+        vertical-align: inherit;
+    }
+</style>
+</div>
+</head>
+<body>
+  <style>
+  {
+   height: 100%;
+   width: 100%;
+   font-family: "Lato", Helvetica, Arial, sans-serif;
+   font-size: 16px;
+   line-height: 1.72222;
+   color: #34495e;
+   background-color: #ffffff;
 }
 </style>
-<body>
-    <header>
-        <br>
-        </div>
-    </header>
+<header>
+  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+  </button>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Family Folder Collector
+      </a>
+    </div>
+    <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
+    <ul class="nav navbar-nav text-center">
+      <li class="active"><a href="#home">Home</a></li>
+      <li><a href="#survey">FFCคืออะไร</a></li>
+      <li><a href="#report">ใครใช้</a></li>
+      <li><a href="#showe">คุณสมบัติ</a></li>
+      <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
+      <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
+      <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
+    </ul>
+  </div>
+</div>
+
+</nav>
+      </header>
 
 
     <main>
@@ -129,29 +134,29 @@ td, th {
     </main>
 
     <footer>
-      <div class="container">
-      <div class="row">
-          <div class="col-md-12">
-            <center>
-                            <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank"><img src="/img/fb1.png" alt="FFC.com" width="50" height="50"></a>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <center>
+                        <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank"><img src="/img/fb1.png" alt="FFC.com" width="50" height="50"></a>
 
-                            <a href="http://www.youtube.com/user/RSUClub/featured" target="_blank"><img src="/img/youtube.png" alt="FFC.com" width="60" height="60"></a>
+                        <a href="http://www.youtube.com/user/RSUClub/featured" target="_blank"><img src="/img/youtube.png" alt="FFC.com" width="60" height="60"></a>
 
-                            <a href="http://plus.google.com/b/107779432983678391773/107779432983678391773/posts" target="_blank"><img src="/img/ig.png"alt="FFC.com" width="50" height="50"></a>
-</center>
-        <div style="background-color:White; color:#000000;padding:15px;">
-            <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
-                <br>
-                <p>จำนวนผู้เข้าชมเว็บไซต์</p>
-                </br>
-                <p>ที่อยู่ </p>
+                        <a href="http://plus.google.com/b/107779432983678391773/107779432983678391773/posts" target="_blank"><img src="/img/ig.png" alt="FFC.com" width="50" height="50"></a>
+                    </center>
+                    <div style="background-color:White; color:#000000;padding:15px;">
+                        <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
+                            <br>
+                            <p>จำนวนผู้เข้าชมเว็บไซต์</p>
+                            </br>
+                            <p>ที่อยู่ </p>
 
-                <p> อาคารอุทยานวิทยาศาสตร์ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
-                    <br>112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120
-                    <br>โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
-        </div>
-        </div>
-        </div>
+                            <p> อาคารอุทยานวิทยาศาสตร์ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
+                                <br>112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120
+                                <br>โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
