--- a/_layouts/ffc-layouts.html
+++ b/_layouts/ffc-layouts.html
@@ -37,7 +37,7 @@
 
                             <center>
                                 <td>
-                                    <nav>
+                                  <nav class="navbar navbar-default stuckMenu isStuck" style="position: fixed; top: 0px;">
 
                                         <ul class="nav nav-pills navbar-righ">
 
@@ -62,7 +62,20 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<style>
+#owl-demo-1 .item img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
 
+.item .img-responsive {
+    cursor: url(../img/cross.png),auto;
+}
+.img-rounded {
+    border-radius: 6px;
+}
+</style>
 <body>
     <header>
         <br>
