--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -1,4 +1,4 @@
-<html>
+ <html>
 
 <head>
     <meta charset="utf-8" />
@@ -17,7 +17,7 @@
         <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
         <!-- Latest compiled and minified JavaScript -->
-      
+
 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -112,9 +112,9 @@
     <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
     <ul class="nav navbar-nav text-center">
       <li class="active"><a href="#home">Home</a></li>
-      <li><a href="#survey">FFCคืออะไร</a></li>
-      <li><a href="#report">ใครใช้</a></li>
-      <li><a href="#showe">คุณสมบัติ</a></li>
+      <li class="active"><a href="#survey">FFCคืออะไร</a></li>
+      <li class="active"><a href="#report">ใครใช้</a></li>
+      <li class="active"><a href="#showe">คุณสมบัติ</a></li>
       <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
       <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
       <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
