--- a/_layouts/ffc-layouts.html
+++ b/_layouts/ffc-layouts.html
@@ -18,45 +18,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <div class="row">
-            <div class="col-md-12">
-                <table>
-                    <tr>
-                        <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
-                        <td>
-                            <a href=" https://suppaluck.github.io/index">
-                                <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="FFC.com" width="70" height="60"></td>
-                        </a>
-                        </td>
-                        <td>
-                            <h4>Family Folder Collector</h4>
-                            <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
-                            <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
-                            <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
-                            <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
 
-                            <center>
-                                <td>
-                                  <nav class="navbar navbar-default stuckMenu isStuck" style="position: fixed; top: 0px;">
-
-                                        <ul class="nav nav-pills navbar-righ">
-
-                                            <li><a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a></li>
-                                            <li><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li>
-                                            <li><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li>
-                                            <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
-                                            <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
-                                            <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
-                                        </ul>
-                                    </nav>
-
-
-                                </td>
-                            </center>
-                    </tr>
-                </table>
-            </div>
-        </div>
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -78,10 +40,34 @@
 </style>
 <body>
     <header>
-        <br>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+      </button>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Family Folder Collector
+          </a>
+        </div>
+        <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
+        <ul class="nav navbar-nav text-center">
+          <li class="active"><a href="#home">Home</a></li>
+          <li><a href="#survey">FFCคืออะไร</a></li>
+          <li><a href="#report">ใครใช้</a></li>
+          <li><a href="#showe">คุณสมบัติ</a></li>
+          <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
+          <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
+          <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
+        </ul>
+      </div>
+    </div>
+
+    </nav>
         </div>
     </header>
-
 
     <main>
       <div style="background-color:#d9ffb3; color:#000000;padding:15px;">
