--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -25,6 +25,16 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <style>
+.intro-header {
+    height: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    color: #f8f8f8;
+    background-image: url(../img/bg.jpg);
+    background-size: 100%;
+    text-align: center;
+    background-color: #34495e;
+}
 .navbar-inverse {
     background-color: #ecf0f1;
 }
@@ -44,8 +54,8 @@
         background-position: left bottom;
         background-size: 100%;
         background-repeat: no-repeat;
-        background-image: url(../img/bg.jpg);
-        background-color: #b8b894;
+        background-image: url(../img/UT77.jpg);
+        background-color: #006699;
     }
 
     .lead {
@@ -68,6 +78,9 @@
 
     .trb-video-bg {
         background-color: #d9ffb3;
+    }
+    .trb-contact-bg {
+        background-color: #ffff99;
     }
 
     td[Attributes Style] {
@@ -106,18 +119,18 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Family Folder Collector
+      <a class="navbar-brand" href="https://suppaluck.github.io/index">Family Folder Collector
       </a>
     </div>
     <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
     <ul class="nav navbar-nav text-center">
       <li class="active"><a href="#home">Home</a></li>
-      <li class="active"><a href="#survey">FFCคืออะไร</a></li>
-      <li class="active"><a href="#report">ใครใช้</a></li>
-      <li class="active"><a href="#showe">คุณสมบัติ</a></li>
+      <li><a href="#survey">FFCคืออะไร</a></li>
+      <li><a href="#report">ใครใช้</a></li>
+      <li><a href="#showe">คุณสมบัติ</a></li>
       <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
       <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
-      <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
+      <li><a href="#footer">ติดต่อ</a></li>
     </ul>
   </div>
 </div>
@@ -134,7 +147,8 @@
     </main>
 
     <footer>
-        <div class="container">
+        <div style="background-color:	 #404040; color:white;padding:15px;">
+        <div id="footer" class="container">
             <div class="row">
                 <div class="col-md-12">
                     <center>
@@ -144,7 +158,7 @@
 
                         <a href="http://plus.google.com/b/107779432983678391773/107779432983678391773/posts" target="_blank"><img src="/img/ig.png" alt="FFC.com" width="50" height="50"></a>
                     </center>
-                    <div style="background-color:White; color:#000000;padding:15px;">
+
                         <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
                             <br>
                             <p>จำนวนผู้เข้าชมเว็บไซต์</p>
