--- a/_layouts/ffc-layouts.html
+++ b/_layouts/ffc-layouts.html
@@ -80,7 +80,7 @@
 
     <footer>
 
-        <div style="background-color:white; color:#000000;padding:15px;">
+        <div style="background-color:#000000;; color:white;padding:15px;">
             <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
                 <br>
                 <p>จำนวนผู้เข้าชมเว็บไซต์</p>
