--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -1,4 +1,4 @@
- <html>
+<html>
 
 <head>
     <meta charset="utf-8" />
@@ -10,173 +10,97 @@
  </a>
  </div>
  --->
-    <div style="background-color:White;color:white;">
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-        <!-- Latest compiled and minified JavaScript -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/css/bootstrap.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <style>
+            .intro-header {
+                height: 100%;
+                padding-top: 50px;
+                padding-bottom: 50px;
+                color: #f8f8f8;
+                background-image: url(../img/bg.jpg);
+                background-size: 110%;
+                text-align: center;
+                background-color: #34495e;
+            }
 
+            .navbar-inverse {
+                background-color: #ecf0f1;
+            }
 
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<style>
-.intro-header {
-    height: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    color: #f8f8f8;
-    background-image: url(../img/bg.jpg);
-    background-size: 100%;
-    text-align: center;
-    background-color: #34495e;
-}
-.navbar-inverse {
-    background-color: #ecf0f1;
-}
-    .carousel-inner>.item>img,
-    .carousel-inner>.item>a>img {
-        width: auto;
-        margin: auto;
-    }
+            .carousel-inner>.item>img,
+            .carousel-inner>.item>a>img {
+                width: auto;
+                margin: auto;
+            }
 
-    element.style {}
+            element.style {}
 
-    .content-section-a {
-        padding: 90px 0;
-    }
+            .content-section-a {
+                padding: 90px 0;
+            }
 
-    .trb-survey-bg {
-        background-position: left bottom;
-        background-size: 100%;
-        background-repeat: no-repeat;
-        background-image: url(../img/UT77.jpg);
-        background-color: #006699;
-    }
+            .trb-survey-bg {
+                background-position: left bottom;
+                background-size: 100%;
+                background-repeat: no-repeat;
+                background-image: url(../img/UT77.jpg);
+                background-color: #006699;
+            }
 
-    .lead {
-        margin-bottom: 30px;
-        font-family: rsu-light;
-        font-size: 1.2em;
-        line-height: 1.46428571;
-        font-weight: 300;
-    }
+            .lead {
+                margin-bottom: 30px;
+                font-family: rsu-light;
+                font-size: 1.2em;
+                line-height: 1.46428571;
+                font-weight: 300;
+            }
 
-    .trb-report-bg {
-        background-image: url(../img/White.jpg);
-    }
+            .trb-report-bg {
+                background-image: url(../img/White.jpg);
+            }
 
-    .content-section-b {}
+            .content-section-b {}
 
-    .trb-showe-bg {
-        background-color: #b8b894;
-    }
+            .trb-showe-bg {
+                background-color: #b8b894;
+            }
 
-    .trb-video-bg {
-        background-color: #d9ffb3;
-    }
-    .trb-contact-bg {
-        background-color: #ffff99;
-    }
+            .trb-video-bg {
+                background-color: #d9ffb3;
+            }
 
-    td[Attributes Style] {
-        width: 244px;
-        height: 186px;
-        vertical-align: top;
-    }
+            .trb-contact-bg {
+                background-color: #ffff99;
+            }
 
-    user agent stylesheet td,
-    th {
-        display: table-cell;
-        vertical-align: inherit;
-    }
-</style>
-</div>
+            td[Attributes Style] {
+                width: 244px;
+                height: 186px;
+                vertical-align: top;
+            }
+
+            user agent stylesheet td,
+            th {
+                display: table-cell;
+                vertical-align: inherit;
+            }
+
+        </style>
+
 </head>
+
 <body>
-  <style>
-  {
-   height: 100%;
-   width: 100%;
-   font-family: "Lato", Helvetica, Arial, sans-serif;
-   font-size: 16px;
-   line-height: 1.72222;
-   color: #34495e;
-   background-color: #ffffff;
-}
-</style>
-<header>
-  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-  </button>
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="https://suppaluck.github.io/index">Family Folder Collector
-      </a>
-    </div>
-    <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
-    <ul class="nav navbar-nav text-center">
-      <li class="active"><a href="#home">Home</a></li>
-      <li><a href="#survey">FFCคืออะไร</a></li>
-      <li><a href="#report">ใครใช้</a></li>
-      <li><a href="#showe">คุณสมบัติ</a></li>
-      <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
-      <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
-      <li><a href="#footer">ติดต่อ</a></li>
-    </ul>
-  </div>
-</div>
-
-</nav>
-      </header>
-
-
+    {% include header.html %}
     <main>
-
-
         {{ content }}
 
     </main>
+    {% include footer.html %}
 
-    <footer>
-        <div style="background-color:	 #404040; color:white;padding:15px;">
-        <div id="footer" class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <center>
-                        <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank"><img src="/img/fb1.png" alt="FFC.com" width="50" height="50"></a>
-
-                        <a href="http://www.youtube.com/user/RSUClub/featured" target="_blank"><img src="/img/youtube.png" alt="FFC.com" width="60" height="60"></a>
-
-                        <a href="http://plus.google.com/b/107779432983678391773/107779432983678391773/posts" target="_blank"><img src="/img/ig.png" alt="FFC.com" width="50" height="50"></a>
-                    </center>
-
-                        <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
-                            <br>
-                            <p>จำนวนผู้เข้าชมเว็บไซต์</p>
-                            </br>
-                            <p>ที่อยู่ </p>
-
-                            <p> อาคารอุทยานวิทยาศาสตร์ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
-                                <br>112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120
-                                <br>โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        </center>
-
-    </footer>
 </body>
 
 </html>
