--- a/_layouts/icon-ffc-layouts.html
+++ b/_layouts/icon-ffc-layouts.html
@@ -21,24 +21,39 @@
     <div style="background-color:#aaff80;color:white;padding:10px;">
         <div class="row">
             <div class="col-md-12">
+                <table>
+                    <tr>
+                        <td>
+                            <a href="https://suppaluck.github.io/index">
+                                <img src="https://lh3.ggpht.com/OsDaHoxLg9MXmGskclOV6V3592KiFQICLv1Cac2RwIVgrv7q9D43ajfG82HNfY_8Gyw=w300-rw" alt="ffc.com" width="125" height="110"></td>
+                        </a>
+                        </td>
+                        <td>
+                            <h3 style="color:#6699FF;">FAMILY FOLDER COLLECTOR</h3>
+                            <h6 style="color:#0033FF;"><b>FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพชุมชน</b></h6>
+                        </td>
+                        <td> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </td>
+                        <td>
+                          <nav>
+                              <ul class="nav navbar-nav navbar-right">
+                                  <li><a href="https://suppaluck.github.io/about-ffc">FFCคืออะไร</a></li>
+                                  <li><a href="https://suppaluck.github.io/who-ffc">ใครใช้</a></li>
+                                  <li><a href="https://suppaluck.github.io/property-ffc">คุณสมบัติ</a></li>
+                                  <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ</a></li>
+                                  <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
+                                  <li><a href="https://suppaluck.github.io/contact-ffc.html">ติดต่อ</a></li>
+                              </ul>
+                          </nav>
+                        </td>
+                    </tr>
+                </table>
+            </div>
 
+</div>
 </head>
 
 <body>
     <header>
-      <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
-    </ul>
-  </div>
-</nav>
 </div>
     </header>
     <main>
@@ -69,5 +84,3 @@
 </body>
 
 </html>
-
-    
