--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div style="background-color:	 #404040; color:white;padding:15px;">
         <div id="footer" class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-6">
                     <center>
                         <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank"><img src="/img/fb1.png" alt="FFC.com" width="50" height="50"></a>
 
@@ -10,22 +10,23 @@
 
                         <a href="http://plus.google.com/b/107779432983678391773/107779432983678391773/posts" target="_blank"><img src="/img/ig.png" alt="FFC.com" width="50" height="50"></a>
                     </center>
+                  </div>
+                    <div class="col-md-6">
+                       <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
+                            <br>
+                            <p>จำนวนผู้เข้าชมเว็บไซต์</p>
+                            </br>
+                            <p>ที่อยู่ </p>
 
-                    <center> <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
-                        <br>
-                        <p>จำนวนผู้เข้าชมเว็บไซต์</p>
-                        </br>
-                        <p class="text-big">ที่อยู่ </p>
-
-                        <p> อาคารอุทยานวิทยาศาสตร์ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
-                            <br>112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120
-                            <br>โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
+                            <p> อาคารอุทยานวิทยาศาสตร์ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
+                                <br>112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120
+                                <br>โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
-    </center>
+
 
 </footer>
