--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -17,12 +17,12 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <style>
             .intro-header {
-                height: 100%;
+                height: 120%;
                 padding-top: 50px;
                 padding-bottom: 50px;
                 color: #f8f8f8;
-                background-image: url(../img/bg.jpg);
-                background-size: 110%;
+                background-image: url(../img/bbg.png);
+                background-size: 99.50%;
                 text-align: center;
                 background-color: #34495e;
             }
