--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,18 @@
 <header>
 
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="https://suppaluck.github.io/index">Family Folder Collector
+      </a>
+    </div>
+    <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
+    <ul class="nav navbar-nav text-center">
+      <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
+      <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
+    </ul>
+  </div>
+</div>
+
+</nav>
       </header>
