--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,15 +12,15 @@
                     </center>
                   </div>
                     <div class="col-md-6">
-                       <a href=" #">FFCคืออะไร</a> | <a href="#">คำถามที่พบบ่อย</a> | <a href="#">ติดต่อ</a>
+
                             <br>
                             <p>จำนวนผู้เข้าชมเว็บไซต์</p>
                             </br>
                             <p>ที่อยู่ </p>
 
                             <p> อาคารอุทยานวิทยาศาสตร์ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
-                                <br>112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120
-                                <br>โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
+                                <br>112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120</br>
+                                <br>โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p></br>
                     </div>
                 </div>
             </div>
