--- a/_layouts/ffc-layouts.html
+++ b/_layouts/ffc-layouts.html
@@ -38,6 +38,7 @@
     border-radius: 6px;
 }
 </style>
+</div>
 <body>
     {% include header.html %}
 
@@ -51,7 +52,6 @@
     </main>
 
     {% include footer.html %}
-
 
 </body>
 
