--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,24 +3,27 @@
         <div id="footer" class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <center>
-                        <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank"><img src="/img/fb1.png" alt="FFC.com" width="50" height="50"></a>
 
-                        <a href="http://www.youtube.com/user/RSUClub/featured" target="_blank"><img src="/img/youtube.png" alt="FFC.com" width="60" height="60"></a>
+                        <a href="https://www.facebook.com/FFC.NECTEC/?fref=ts" target="_blank">
+                          <img src="/img/fb1.png" alt="FFC.com" width="50" height="50"></a>
 
-                        <a href="http://plus.google.com/b/107779432983678391773/107779432983678391773/posts" target="_blank"><img src="/img/ig.png" alt="FFC.com" width="50" height="50"></a>
-                    </center>
+                        <a href="http://www.youtube.com/user/RSUClub/featured" target="_blank">
+                          <img src="/img/youtube.png" alt="FFC.com" width="60" height="60"></a>
+
+                        <a href="http://plus.google.com/b/107779432983678391773/107779432983678391773/posts" target="_blank">
+                          <img src="/img/ig.png" alt="FFC.com" width="50" height="50"></a>
+
                   </div>
                     <div class="col-md-6">
 
-                            <br>
+
                             <p>จำนวนผู้เข้าชมเว็บไซต์</p>
-                            </br>
+
                             <p>ที่อยู่ </p>
 
                             <p> อาคารอุทยานวิทยาศาสตร์ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ
-                                <br>112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120</br>
-                                <br>โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p></br>
+                              112 ถนนพหลโยธิน ตำบลคลองหนึ่ง อำเภอคลองหลวง จังหวัดปทุมธานี 12120
+                                โทรศัพท์ 02-564-6900 โทรสาร 02-564-6901-3 </p>
                     </div>
                 </div>
             </div>
