แก้ error อีกครั้ง

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <div style="background-color:	 #404040; color:white;padding:15px;">
-        <div id="footer" class="container">
+        <div class="container">
             <div class="row">
                 <div class="col-md-6">
 
@@ -12,7 +12,6 @@
 
                         <a href="http://plus.google.com/b/107779432983678391773/107779432983678391773/posts" target="_blank">
                           <img src="/img/ig.png" alt="FFC.com" width="50" height="50"></a>
-
                   </div>
                     <div class="col-md-6">
 
