--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
     </div>
     <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
     <ul class="nav navbar-nav text-center">
-      <li><a href="https://suppaluck.github.io/FAQ-ffc">FAQ </a></li>
+      <li>FAQ </li>
       <li><a href="https://suppaluck.github.io/download-ffc.html">ดาวน์โหลด</a></li>
     </ul>
   </div>
