--- a/_layouts/default-ffc.html
+++ b/_layouts/default-ffc.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>{{ site.title }}</title>
+
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/css/bootstrap.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -32,7 +34,7 @@
             element.style {}
 
             .content-section-a {
-                padding: 90px 0;
+                padding: 100px 0;
             }
 
             .trb-survey-bg {
@@ -52,10 +54,14 @@
             }
 
             .trb-report-bg {
+                background-size: 100%;
                 background-image: url(../img/White.jpg);
+
             }
 
-            .content-section-b {}
+            .content-section-b {
+
+            }
 
             .trb-showe-bg {
                 background-color: #b8b894;
@@ -80,6 +86,10 @@
                 display: table-cell;
                 vertical-align: inherit;
             }
+            .center {
+              padding: 70px 0;
+              text-align: center;
+              }
 
         </style>
 </head>
